--- a/css/main.css
+++ b/css/main.css
@@ -18,16 +18,11 @@ html {
 
 body {
     color:black;
-    font-family: 'Roboto', sans-serif;;
+    font-family: 'Roboto', sans-serif !important;
     background-color: #f3f6f9;
     /*background-image:url();*/
 }
 
-div {
-    color:white;*
-    background-color: blue;
-    width: 100%;
-}
 
 header{
     padding: 0;
@@ -395,4 +390,209 @@ footer svg {
 header svg {
     width: 100%;
     height: auto;
+}
+
+
+#pendantMatch-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: #fff;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+}
+
+#je-participe {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+#choix-participation {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+#choix-role-avantMatch {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.choix-role-avantMatch--titre {
+    font-size: 4vw;
+    font-weight: 600;
+    text-align: center;
+    color: #333;
+    margin: 30px auto;
+}
+
+ #participation-component-oui {
+     position: absolute;
+     left: 0;
+     top: 0;
+     z-index: 100;
+ }
+ #participation-component-non {
+     position: absolute;
+     right: 0;
+     top: 0;
+     z-index: 100;
+ }
+
+
+.demo-list-two {
+    width: 90%;
+    padding: 0 5% !important;
+    margin: 0;
+}
+
+#choixRole-avantMatch-goToMatch {
+    padding: 20px 0;
+    margin: 30px auto;
+    width: 250px;
+    text-align: center;
+    color: #fff;
+    background-color: #00bb69;
+    border-radius: 7px;
+    font-size: 26px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.mdl-list__item--two-line .mdl-list__item-primary-content {
+    height: 60px !important;
+}
+
+.mdl-list__item--two-line {
+    height: 100px;
+}
+
+.mdl-list__item .mdl-list__item-primary-content .mdl-list__item-avatar {
+    margin-top: 5px;
+    height: 50px;
+    width: 50px;
+}
+
+.mdl-list__item--two-line .mdl-list__item-primary-content .mdl-list__item-sub-title {
+    margin-top: 10px;
+}
+
+
+.mdl-list__item--two-line {
+    height: 100px !important;
+}
+
+.mdl-list__item-avatar, .mdl-list__item-avatar.material-icons {
+    background-color: transparent !important;
+    border-radius: 0 !important;
+}
+
+#participation-component-base {
+    width: 100%;
+    background-color: #3d424d;
+    font-size: 6vw;
+}
+
+#participation-component-oui {
+    width: 95px;
+    background-color: #00bb69;
+}
+#participation-component-non {
+    width: 95px;
+    background-color: #fa8400;
+}
+
+.participation-component {
+    height: 25px;
+    padding: 25px 0;
+    text-align: center;
+    font-size: 30px;
+    color: #fff;
+    border-radius: 20px;
+    font-weight: 600;
+    line-height: 30px;
+}
+
+.pendantMatch-actions-boutons {
+
+}
+
+.pendantMatch-actions-bigRow {
+    flex-direction: row;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+    height: 100%;
+}
+
+#pendantMatch-actions {
+
+    flex-direction: column;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 90%;
+}
+
+.pendantMatch-actions-colonne {
+
+    flex-direction: column;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100%;
+    width: 25%;
+}
+
+
+.pendantMatch-actions-colonne--timer {
+    width: 50%;
+}
+
+.pendantMatch-bandeau {
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: relative;
+}
+
+.pendantMatch-bandeau-top {
+    background: #00bb69;
+    height: 34%;
+    width: 100%;
+
+}
+.pendantMatch-bandeau-score {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0 5%;
+    width: 90%;
+    height: 66%;
+    background-image: url("../img/haut-final.svg");
+}
+
+.pendantMatch-bandeau-image {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+}
+
+.pendantMatch-bandeau-image--left {
+    left: 5%;
+}
+.pendantMatch-bandeau-image--right {
+    right: 5%;
 }
