--- a/css/main.css
+++ b/css/main.css
@@ -528,7 +528,23 @@ header svg {
 }
 
 .pendantMatch-actions-boutons {
+    padding: 20px;
+    width: 20px;
+    height: 20px;
+    border-radius: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-weight: 600;
+    font-size: 20px;
+}
 
+.pendantMatch-actions-boutons--left {
+    background-color: #00bb69;
+}
+.pendantMatch-actions-boutons--right {
+    background-color: darkorange;
 }
 
 .pendantMatch-actions-bigRow {
@@ -538,7 +554,7 @@ header svg {
     align-items: center;
     width: 90%;
     margin: 0 auto;
-    height: 100%;
+    height: 85%;
 }
 
 #pendantMatch-actions {
@@ -578,7 +594,9 @@ header svg {
     background: #00bb69;
     height: 34%;
     width: 100%;
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .pendantMatch-bandeau-score {
     position: relative;
@@ -603,4 +621,25 @@ header svg {
 }
 .pendantMatch-bandeau-image--right {
     right: 5%;
+}
+
+.pendantMatch-bandeau-top--image {
+    height:100%;
+
+}
+
+#pendantMatch-actions-startButton {
+    display: flex;
+    height: 15%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    border-radius: 7px;
+    background-color: #00bb69;
+    color: white;
+    text-align: center;
+}
+
+#pendantMatch-actions-startButton span {
+    align-self: center;
 }
